[Aman] ADD: Completed with subscription model
